<resources>
    <string name="app_name" translatable="false">Just kill time</string>
    <string name="support">Complaints and suggestions</string>
    <string name="web">Web</string>
    <string name="shoop">Shop</string>
    <string name="higescore">High score</string>
    <string name="transitionOpasity" translatable="false">transition_opasity</string>
    <string name="newHigescore">New high score</string>
    <string name="playerColors">Colors</string>
    <string name="modes">Modes</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="peach">Peach</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="version">Version 1.0.0</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="option">Settings</string>
    <string name="aboutGame">About the game</string>
    <string name="moneyIntro">In the upper right corner displays the number of your points for which you can buy anything in the store</string>
    <string name="shoopIntro">To go to the store, click on the basket icon</string>
    <string name="tapToPlayIntro">Click anywhere on the screen to start playing</string>
    <string name="playerIntro">Click on the screen to change the direction of movement of the player</string>
    <string name="trianglesIntro">Dodge gray triangles and collect green ones</string>
    <string name="scoreIntro">The number of your points is displayed below</string>
    <string name="exampleIntro">You can see how your chosen color will look right in the store</string>
    <string name="productIntro">Products in the store are displayed in the format \"color | price\" or \"rotation angle | price\". If you have not bought the product, it will be highlighted in red</string>
    <string name="tabsIntro">Products in the store are divided into \'colors\' and \'modes\'. To go to a specific group, click on the desired tab</string>
    <string name="codJiWeb" translatable="false">CodJi web</string>
    <string name="supportText">Support</string>
    <string name="mission">Missions</string>
    <string name="statistics">Statistics</string>
    <string name="play">Games played</string>
    <string name="all_points">Number of points</string>
    <string name="time">Time in game mode</string>
    <string name="goods">The number of goods purchased in the store</string>
    <string name="missions_complete">Number of missions completed</string>
    <string name="extra_lives">Extra lives spent</string>
    <string name="clicks_count">Number of clicks</string>
    <string name="secondChance">Respawn</string>
    <string name="Blue">Blue</string>
    <string name="Crimson">Crimson</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Turquoise">Turquoise</string>
    <string name="Orange">Orange</string>
    <string name="Pistachio">Pistachio</string>
    <string name="missionsIntro">To go to the list of missions, click on the icon on the right</string>
    <string name="statisticsIntro">By clicking on the icon on the left you will go to your statistics</string>
    <string name="missionsItemIntro">Each element of the mission list consists of the task text on the left and the progress on the task on the right</string>
    <string name="missionsCompleteItem">Performing 3 tasks, you get an extra life that you can spend on the game. The indicator at the top shows how many missions are left to complete the rewards</string>
    <string name="displayTimerIntro">After the first death, you can continue the game by spending an extra life. Their number is displayed in the center of the pop-up window after death. It takes 5 seconds to make a decision</string>
    <string name="godModIntro">When selecting a green triangle, you become invulnerable for 3 seconds. The timer that appears in the upper left corner shows how long this mode will be active</string>
    <string name="HaveNiceGame">Have a nice game</string>
    <string name="left" translatable="false"><![CDATA[<]]></string>
    <string name="right" translatable="false"><![CDATA[>]]></string>
    <string name="randomDeg" translatable="false">\?°</string>
    <string name="buy_rewards">Buy skin for 10</string>

    <array name="missions">
        <item name="mission0">Score ? points</item>
        <item name="mission1">Score ? points in one game</item>
        <item name="mission2">Hold on ? seconds</item>
        <item name="mission3">Spend ? seconds in the game</item>
        <item name="mission4">Play ? times</item>
        <item name="mission5">Beat your record</item>
    </array>
</resources>
