<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainRelativeLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionActivity"
    android:background="@color/colorAccent40"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#ffffff"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:textSize="20dp"
                android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_gravity="left"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="#000000"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="© 2020 CodJi Game \n Все права защищены"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="left"
                    android:textSize="15dp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider_option"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/russian"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/russian"
                    android:textSize="18dp"
                    android:textColor="#000000"
                    android:gravity="left"
                    android:layout_weight="4"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:theme="@style/Switch"
                    android:id="@+id/languageSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/left"
                    android:textOn="@string/right"
                    app:showText="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textSize="18dp"
                    android:textColor="#000000"
                    android:gravity="right"
                    android:layout_weight="4"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/english"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutGameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:padding="10dp"
                android:gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/about_game"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutGame"
                    android:textColor="#000000"
                    android:layout_weight="8"
                    android:textSize="18dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_right"
                    android:layout_gravity="right|center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:padding="10dp"
                android:gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/web"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/codJiWeb"
                    android:textColor="#000000"
                    android:layout_weight="8"
                    android:textSize="18dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_right"
                    android:layout_gravity="right|center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#ffffff"
                android:padding="10dp"
                android:gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/support"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:textColor="#000000"
                    android:layout_weight="8"
                    android:textSize="18dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_right"
                    android:layout_gravity="right|center_vertical"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>